# nedrexdb

./: .pre-commit-config.yaml  README.md  build.py  build.sh  config.toml  pyproject.toml  set_metadata.py
cli/: README.md  nedrex_cli.py
nedrexdb/: __init__.py  common.py  exceptions.py  logger.py
nedrexdb/analyses/: molecule_similarity.py
nedrexdb/control/: docker.py
nedrexdb/db/: __init__.py  collection_stats.py  mongo_to_neo.py  update_db_version.py
nedrexdb/db/models/: __init__.py
nedrexdb/db/models/edges/: disorder_has_phenotype.py  disorder_is_subtype_of_disorder.py  drug_has_contraindication.py  drug_has_indication.py  drug_has_side_effect.py  drug_has_target.py  gene_associated_with_disorder.py  gene_expressed_in_tissue.py  go_is_subtype_of_go.py  protein_encoded_by_gene.py  protein_expressed_in_tissue.py  protein_has_go_annotation.py  protein_in_pathway.py  protein_interacts_with_protein.py  side_effect_same_as_phenotype.py  variant_affects_gene.py  variant_associated_with_disorder.py
nedrexdb/db/models/nodes/: disorder.py  drug.py  (+9 more)
nedrexdb/db/parsers/: __init__.py  biogrid.py  bioontology.py  chembl.py  clinvar.py  ctd.py  disgenet.py  drug_central.py  drugbank.py  go.py  hpa.py  hpo.py  iid.py  intact.py  mondo.py  ncbi.py  omim.py  reactome.py  repotrial.py  sider.py  uberon.py  unichem.py  uniprot.py  uniprot_signatures.py
nedrexdb/downloaders/: __init__.py  biogrid.py  drugbank.py
nedrexdb/post_integration/: drop_empty_collections.py  trim_uberon.py
scripts/: parse_repotrial_mapping.py  scraped_codes_2019.tsv
tests/: test_nedrexdb.py
