[tool.poetry]
name = "nedrexdb"
version = "0.1.0"
description = ""
authors = ["james-skelton <james.skelton@newcastle.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.12.0"
mongoengine = "^0.23.1"
docker = "^5.0.0"
more-itertools = "^8.8.0"
loguru = "^0.5.3"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
