[tool.poetry]
name = "nedrexdb"
version = "0.1.0"
description = ""
authors = ["james-skelton <james.skelton@newcastle.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.12.0"
mongoengine = "^0.23.1"
docker = "^5.0.0"
more-itertools = "^8.8.0"
loguru = "^0.5.3"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
biopython = "^1.79"
xmljson = "^0.2.1"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
tqdm = "^4.62.3"
pandas = "^1.3.4"
obonet = "^0.3.0"
lxml = "^4.6.3"
rdflib = "^6.0.2"
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
